# h-w_12_1

./: README.md  pyproject.toml
src/: external_api.py  utils.py
tests/: mylog.txt  test_external_api.py
