[tool.poetry]
name = "dz-12"
version = "0.1.0"
description = ""
authors = ["UserE <lena.vita.99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.lint.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
/(
.git
| .mypy_cache
| .venv
| venv
| env
)/
'''


[tool.isort]
# Максимальная длина строки
line_length = 119